--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="./favicon1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kitchen Creation</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic" rel="stylesheet" />  </head>
