--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="./favicon1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kitchen Creation</title>
+    <style>
+     body {
+    background-color:#F1F8E8;  /* Soft Off-White */
+    color: #333;  /* Default text color */
+    font-family: Arial, sans-serif;
+}
+    </style>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic" rel="stylesheet" />  </head>
   <body>
     <div id="root"></div>
