--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kitchen Creation</title>
     <style>
+      ::-webkit-scrollbar {
+        scrollbar-width: thin;
+        scrollbar-color: #000 #ff0000;
+      }
      body {
     background-color:#F1F8E8;  /* Soft Off-White */
     color: #333;  /* Default text color */
