--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Kitchen Creation</title>
     <style>
       ::-webkit-scrollbar {
-        scrollbar-width: thin;
-        scrollbar-color: #000 #ff0000;
+        display: none;
+        scroll-snap-type: smooth;
+        scroll-behavior: smooth;
+        
       }
      body {
     background-color:#F1F8E8;  /* Soft Off-White */
